# chronos-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCY_INJECTION_ARCHITECTURE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  test.yml
chronos_mcp/: __init__.py  accounts.py  bulk.py  caldav_utils.py  calendars.py  config.py  credentials.py  events.py  exceptions.py  journals.py  models.py  rrule.py  search.py  server.py  tasks.py  utils.py  validation.py
chronos_mcp/tools/: accounts.py  base.py  bulk.py  calendars.py  events.py  journals.py  tasks.py
docs/: ARCHITECTURE.md  DEPENDENCY_UPDATE_REPORT.md  VTODO_VJOURNAL_GUIDE.md
docs/adr/: 0001-fastmcp-2-framework.md  0002-rate-limiting-postponed.md  0003-utc-datetime-normalization.md  0004-dependency-injection-refactor.md  0005-canonical-rrule-validator.md  0006-consolidate-ci-workflows.md
tests/: conftest.py
tests/unit/: test_accounts.py  test_base.py  test_bulk.py  test_bulk_create.py  test_bulk_delete.py  test_bulk_resource_limits.py  test_caldav_utils.py  test_calendars.py  test_config.py  test_config_validation.py  test_credentials.py  test_credentials_security.py  test_cryptography_security.py  test_events.py  test_exceptions.py  test_journals.py  test_logging_config.py  test_models.py  test_race_conditions.py  test_reconnect_heal.py  test_recurring_events.py  test_rrule.py  test_search.py  test_search_advanced.py  test_server_input_validation.py  test_ssrf_protection.py  test_tasks.py  test_thread_safety.py  test_tools_journals.py  test_tools_tasks.py  test_url_validation_security.py  test_utils.py  test_validation.py
